--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "posthog-js": "^1.249.3",
+    "posthog-node": "^4.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
